--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ jdk:
   - openjdk7
   - oraclejdk7
   - openjdk6
+
+before_install:
+  - git clone https://github.com/rmct/AutoReferee.git
+  - pushd AutoReferee && mvn clean package install && popd
