--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,11 @@ name: OpenHouseAdmin
 main: org.mctourney.openhouse.OpenHouseAdmin
 version: 0.4.0
 
-depend: [WorldGuard]
+depend:
+  - AutoReferee
+
+softdepend:
+  - WorldEdit
 
 commands:
   openhouse:
