--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <bukkit.version>1.4.7-R1.0</bukkit.version>
     <java.target.version>1.6</java.target.version>
-    <autoreferee.version>2.1</autoreferee.version>
+    <autoreferee.version>2.2</autoreferee.version>
   </properties>
 
   <scm>
@@ -89,6 +89,12 @@
       <artifactId>commons-cli</artifactId>
       <version>1.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.jdom</groupId>
+      <artifactId>jdom2</artifactId>
+      <version>2.0.4</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -143,6 +149,7 @@
                   <include>org.apache.commons:commons-lang3</include>
                   <include>commons-collections:commons-collections</include>
                   <include>commons-cli:commons-cli</include>
+                  <include>org.jdom:jdom2</include>
                 </includes>
               </artifactSet>
             </configuration>
