--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.gmail.imustek.oha</groupId>
+  <groupId>org.mctourney.openhouse</groupId>
   <artifactId>OpenHouseAdmin</artifactId>
   <version>0.1-SNAPSHOT</version>
   <name>Open House Administrative Plugin</name>
