Add openhouse.chatadmin, chat control, ...
Lobby/hub distinction, and player invisibility

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -31,7 +31,13 @@ permissions:
       openhouse.coach: true
   openhouse.streamer:
     default: false
+    children:
+      openhouse.chatadmin: true
   openhouse.coach:
+    default: false
+    children:
+      openhouse.chatadmin: true
+  openhouse.chatadmin:
     default: false
   openhouse.group.*:
     default: false
