--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,15 @@
           <include>plugin.yml</include>
         </includes>
       </resource>
+
+      <resource>
+        <targetPath>defaults/</targetPath>
+        <filtering>true</filtering>
+        <directory>${basedir}/src/main/resources/</directory>
+        <includes>
+          <include>config.yml</include>
+        </includes>
+      </resource>
     </resources>
 
     <plugins>
